crates/stef-doc/tests/snapshots/render__render@alias_basic.stef.snap
---
source: crates/stef-doc/tests/render.rs
description: "/// Sample type alias.\ntype Sample = u32;"
input_file: crates/stef-parser/tests/inputs/alias_basic.stef
---
--- alias_basic/index.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>alias_basic - Stef</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>Schema alias_basic</h2>
</div>
<div class="section">
  <h3>Modules</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Structs</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Enums</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Aliases</h3>
  <table>
    <tr>
      <td class="pr-8">
        <a class="text-lg name-alias" href="alias.Sample.html">Sample</a>
      </td>
      <td>
        <p>Sample type alias.</p>
      </td>
    </tr>
  </table>
</div>
<div class="section">
  <h3>Constants</h3>
  <table>
  </table>
</div>
    </main>
  </body>
</html>

--- alias_basic/alias.Sample.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>Sample - Stef</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>
    Alias
    <a href="index.html">alias_basic</a>::<span class="name-alias">Sample</span>
  </h2>
  <pre class="item-definition my-2">/// Sample type alias.
type Sample = u32;</pre>
  <div class="markdown pl-6">
    <p>Sample type alias.</p>
  </div>
</div>

    </main>
  </body>
</html>
