crates/stef-doc/tests/snapshots/render__render@enum_generics.stef.snap
---
source: crates/stef-doc/tests/render.rs
description: "/// Enum with generics.\nenum Sample<A, B, C, D> {\n    One @1,\n    Two(A @1, B @2) @2,\n    Three {\n        field1: C @1,\n        field2: D @2,\n    } @3,\n}"
input_file: crates/stef-parser/tests/inputs/enum_generics.stef
---
--- enum_generics/index.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>enum_generics - Stef</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>Schema enum_generics</h2>
  <div class="markdown pl-6">
    
  </div>
</div>
<div class="section">
  <h3>Modules</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Structs</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Enums</h3>
  <table>
    <tr>
      <td class="pr-8">
        <a class="text-lg name-enum" href="enum.Sample.html">Sample</a>
      </td>
      <td>
        <p>Enum with generics.</p>
      </td>
    </tr>
  </table>
</div>
<div class="section">
  <h3>Aliases</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Constants</h3>
  <table>
  </table>
</div>
    </main>
  </body>
</html>

--- enum_generics/enum.Sample.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>Sample - Stef</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>
    Enum
    <a href="index.html">enum_generics</a>::<span class="name-enum">Sample</span>
  </h2>
  <pre class="item-definition my-2">/// Enum with generics.
enum Sample&lt;A, B, C, D&gt; {
    One @1,
    Two(A @1, B @2) @2,
    Three {
        field1: C @1,
        field2: D @2,
    } @3,
}
</pre>
  <div class="markdown pl-6">
    <p>Enum with generics.</p>
  </div>
</div>
<div class="section">
  <h3>Variants</h3>
  <ul>
    <li class="field-definition">
      <pre class="name-variant text-lg">One</pre>
      <div class="markdown pl-6">
        
      </div>
      <div class="pl-6">
      </div>
    </li>
    <li class="field-definition">
      <pre class="name-variant text-lg">Two</pre>
      <div class="markdown pl-6">
        
      </div>
      <div class="pl-6">
        <h4>Fields</h4>
        <ul>
          <li>
            <code>
              <span class="field-name">0</span>:
              <span class="field-type">A</span>
              <span class="field-id">@1</span>
            </code>
          </li>
          <li>
            <code>
              <span class="field-name">1</span>:
              <span class="field-type">B</span>
              <span class="field-id">@2</span>
            </code>
          </li>
        </ul>
      </div>
    </li>
    <li class="field-definition">
      <pre class="name-variant text-lg">Three</pre>
      <div class="markdown pl-6">
        
      </div>
      <div class="pl-6">
        <h4>Fields</h4>
        <ul>
          <li>
            <code>
              <span class="field-name">field1</span>:
              <span class="field-type">C</span>
              <span class="field-id">@1</span>
            </code>
            <div class="markdown pl-4">
              
            </div>
          </li>
          <li>
            <code>
              <span class="field-name">field2</span>:
              <span class="field-type">D</span>
              <span class="field-id">@2</span>
            </code>
            <div class="markdown pl-4">
              
            </div>
          </li>
        </ul>
      </div>
    </li>
  </ul>
</div>

    </main>
  </body>
</html>
